# agentwatch-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
agentwatch_cli/: __init__.py  __main__.py  cli.py  config.py  connector.py  gateway_client.py  moltbot_client.py  service.py
