[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentwatch-cli"
version = "0.1.7"
description = "Connect your local Moltbot gateway to AgentWatch cloud"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "AgentWatch", email = "support@agentwatch.io"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
    "python-socketio>=5.8.0",
    "websockets>=12.0,<15.1",
]

[project.scripts]
agentwatch-cli = "agentwatch_cli.cli:main"

[project.urls]
Homepage = "https://github.com/helivan-research/agentwatch-cli"
Documentation = "https://docs.agentwatch.io/agentwatch-cli"
Repository = "https://github.com/helivan-research/agentwatch-cli"

[tool.setuptools.packages.find]
include = ["agentwatch_cli*"]
